--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,7 +1,7 @@
 //Variables
 @import "variable";
 @import "button";
-
+@import "font";
 body{
     background-color:$primary-color ;
     margin: 0;
@@ -11,6 +11,7 @@ body{
 p{
     color: $light;
     font-family: $main-font;
+    font-size: $base-font;
 }
 
 nav{
