--- a/css/style.css
+++ b/css/style.css
@@ -319,4 +319,12 @@ nav a {
   color: #ffffff;
 }
 
+.d1 {
+  height: 50px;
+  width: 100vw;
+  margin: 20px 0;
+  background-color: #000;
+  color: #fff;
+}
+
 /*# sourceMappingURL=style.css.map */
