--- a/css/style.css
+++ b/css/style.css
@@ -318,13 +318,45 @@ nav a {
   padding: 5px 10px;
   color: #ffffff;
 }
+nav a:hover {
+  color: #ffc107;
+  background-color: #ae1717;
+  border-radius: 50px;
+  transition: 1s;
+}
+nav a:hover:nth-child(2n) {
+  color: #3f1fa8;
+}
+nav a:nth-child(2n) {
+  color: #ae1717;
+}
 
 .d1 {
-  height: 50px;
+  height: auto;
   width: 100vw;
   margin: 20px 0;
+  padding: 15px;
   background-color: #000;
   color: #fff;
+}
+
+.title {
+  font-size: 2rem;
+  color: red;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-transform: uppercase;
+}
+
+.para {
+  font-size: 2rem;
+  color: red;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-transform: lowercase;
+}
+
+.d1 {
+  border: 1px solid red;
+  padding: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
